--- a/tutorials/01_Data_Discovery_CMR.ipynb
+++ b/tutorials/01_Data_Discovery_CMR.ipynb
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CMR_OPS = 'https://cmr.earthdata.nasa.gov/search'"
+    "CMR_OPS = 'https://cmr.earthdata.nasa.gov/search' # "
    ]
   },
   {
