--- a/tutorials/01_Data_Discovery_CMR.ipynb
+++ b/tutorials/01_Data_Discovery_CMR.ipynb
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = f'{CMR_OPS}/{\"collections\"}'"
+    "url = f'{CMR_OPS}/{\"collections\"}' ### test comment"
    ]
   },
   {
