--- a/tutorials/04_NASA_Earthdata_Authentication.ipynb
+++ b/tutorials/04_NASA_Earthdata_Authentication.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "induced-shell",
    "metadata": {},
    "outputs": [],
@@ -69,10 +69,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "signal-slide",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter NASA Earthdata Login Username:  ········\n",
+      "Enter NASA Earthdata Login Password:  ········\n"
+     ]
+    }
+   ],
    "source": [
     "urs = 'urs.earthdata.nasa.gov'    # Earthdata URL endpoint for authentication\n",
     "prompts = ['Enter NASA Earthdata Login Username: ',\n",
@@ -123,10 +132,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "adjusted-render",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 52\n",
+      "drwxr-xr-x  9 jovyan jovyan 6144 Nov 16 18:55 .\n",
+      "drwxr-xr-x  1 root   root   4096 Oct  4 16:21 ..\n",
+      "-rw-------  1 jovyan jovyan  195 Nov 15 22:07 .bash_history\n",
+      "drwxr-xr-x  5 jovyan jovyan 6144 Nov 16 17:43 .cache\n",
+      "drwxr-xr-x  4 jovyan jovyan 6144 Nov 15 19:36 .config\n",
+      "-rw-------  1 jovyan jovyan   69 Nov 15 18:38 .git-credentials\n",
+      "-rw-r--r--  1 jovyan jovyan   86 Nov 15 18:37 .gitconfig\n",
+      "drwxr-xr-x  5 jovyan jovyan 6144 Nov 15 18:30 .ipython\n",
+      "drwxr-xr-x  3 jovyan jovyan 6144 Nov 16 17:11 .jupyter\n",
+      "drwxr-xr-x  3 jovyan jovyan 6144 Nov 15 18:30 .local\n",
+      "-rw-------  1 jovyan jovyan   64 Nov 16 18:55 .netrc\n",
+      "drwxr-xr-x 12 jovyan jovyan 6144 Nov 16 17:13 2021-Cloud-Hackathon\n",
+      "drwxr-xr-x  2 jovyan jovyan 6144 Nov 16 15:32 shared\n"
+     ]
+    }
+   ],
    "source": [
     "!ls -al ~/"
    ]
