--- a/tutorials-templates/06_S6_OPeNDAP_Access_Gridding_template.ipynb
+++ b/tutorials-templates/06_S6_OPeNDAP_Access_Gridding_template.ipynb
@@ -139,7 +139,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
+   "id": "5448879c-fc52-413a-8470-bdc87a0c88a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cycle = 2\n",
+    "\n",
+    "url = f\"https://cmr.earthdata.nasa.gov/search/granules.csv?ShortName={ShortName}&cycle={cycle}&page_size=200\"\n",
+    "\n",
+    "!curl --silent --output \"results.csv\" \"$url\"\n",
+    "\n",
+    "files = !cat results.csv | tail --lines=+2 | cut --delimiter=',' --field=5 | cut --delimiter='/' --field=6\n",
+    "\n",
+    "variables = ['data_01_time',\n",
+    "             'data_01_longitude',\n",
+    "             'data_01_latitude',\n",
+    "             'data_01_ku_ssha']\n",
+    "\n",
+    "v = \",\".join(variables)\n",
+    "\n",
+    "for f in files:\n",
+    "    print(f\"https://opendap.earthdata.nasa.gov/collections/{concept_id}/granules/{f}4?{v}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "50b9b14d-3010-489a-b13d-197e65b5bed4",
    "metadata": {},
    "outputs": [
@@ -147,7 +173,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing subsets.txt\n"
+      "Overwriting subsets.txt\n"
      ]
     }
    ],
@@ -282,11 +308,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "9940e1f6-04ae-4d0e-8c7d-8331734df46d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open (\"subsets.txt\",\"r\") as f:\n",
+    "    f.read().split(\"\\n\")[:-1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -321,7 +350,10 @@
    "id": "6b03c3b3-4827-4ac8-beeb-9fe4527e476e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def download(source: str):\n",
+    "    target = os.path.basename(source.split(\"?\")[0])"
+   ]
   },
   {
    "cell_type": "code",
